# plant_pathology_poetry

./: .gitignore  README.md  data.dvc  handle_data.sh  logistics.sh  pyproject.toml  test.py  test.txt
TB/incepv3/train/: events.out.tfevents.1678336978.192-18-141-236.174483.0.v2
TB/incepv3/validation/: events.out.tfevents.1678337040.192-18-141-236.174483.1.v2
TB/res101/train/: events.out.tfevents.1678320218.192-18-141-236.104288.4.v2
TB/res101/validation/: events.out.tfevents.1678320340.192-18-141-236.104288.5.v2
TB/res50/train/: events.out.tfevents.1678312756.192-18-141-236.104288.0.v2  events.out.tfevents.1678312777.192-18-141-236.104288.1.v2  events.out.tfevents.1678312823.192-18-141-236.104288.2.v2
TB/res50/validation/: events.out.tfevents.1678312899.192-18-141-236.104288.3.v2
env_files/: config.env
logs/res/train/: events.out.tfevents.1678223544.150-230-47-142.99524.0.v2  events.out.tfevents.1678224994.150-230-47-142.107526.0.v2  events.out.tfevents.1678225196.150-230-47-142.107526.1.v2  events.out.tfevents.1678225262.150-230-47-142.107526.2.v2  events.out.tfevents.1678231665.150-230-47-142.107526.4.v2  events.out.tfevents.1678231697.150-230-47-142.107526.5.v2
logs/res/validation/: events.out.tfevents.1678225350.150-230-47-142.107526.3.v2  events.out.tfevents.1678231781.150-230-47-142.107526.6.v2
logs/res101/train/: events.out.tfevents.1678239740.150-230-47-142.107526.7.v2
logs/res101/validation/: events.out.tfevents.1678239875.150-230-47-142.107526.8.v2
notebooks/: tensorflow_classifier.ipynb  test.ipynb
