[tool.poetry]
name = "plant pathology 2021"
version = "1.0.0"
description = ""
authors = ["Yash Choksi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.6"
tensorflow = "2.9.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
tensorboard = "2.9.0"
ipykernel = "^6.21.3"
ipython = "^8.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
